# charon-rudra

./: Cargo.toml  Makefile  TODO.md  rust-toolchain
src/: context.rs  logger.rs  main.rs  options.rs  rudra.rs
src/rudra/: analysis.rs  context.rs  graph.rs  iter.rs  lib.rs  log.rs  macros.rs  paths.rs  report.rs  utils.rs
src/rudra/analysis/: unsafe_dataflow.rs
src/rudra/analysis/send_sync_variance/: mod.rs
