[package]
name = "charon-rudra"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
charon = { git = "https://github.com/AeneasVerif/charon", branch = "main", default-features = false }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.11", features = ["color"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91", features = ["unbounded_depth"] }
serde_stacker = "0.1.11"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "std", "fmt" ] }
tracing-tree = { git = "https://github.com/Nadrieril/tracing-tree", features = [ "time" ] } # Fork with improved formating and timing info.
# tracing-tree = { path = "../../tracing-tree", features = [ "time" ] }
tracing = { version = "0.1", features = [ "max_level_trace" ] }